--- a/portfoliofajri/index.html
+++ b/portfoliofajri/index.html
@@ -45,7 +45,7 @@
             Finance
           </h1>
 
-          <a href="mailto:fajriantodjilatim@gmail.com" class="button">Hubungi Saya</a>
+          <a href="https://wa.link/vmebvh" class="button">Hubungi Saya</a>
         </div>
 
         <div class="home__social">
